Large refactoring
Update dependencies.
Eliminate testcontainers in favour of ervilla.
Use latest idstore.